# alpha_factory

./: .copilotignore  .gitignore  .pre-commit-config.yaml  README.md  environment.yml  pyproject.toml  requirements.txt  ruff.toml  verify_tests.py
.github/: copilot-instructions.md  git-commit-instructions.md
.github/agents/: code-reviewer.agent.md  python-reviewer.agent.md  tdd-guide.agent.md
.github/skills/brainstorming/: SKILL.md
.github/skills/executing-plans/: SKILL.md
.github/skills/writing-plans/: SKILL.md
.github/workflows/: uv-ci.yml
alpha/: __init__.py
alpha/data_provider/: __init__.py  cache_manager.py  cleaner.py  cluster_pool.py  data_provider.py  pool.py  reader.py  schema.py  stock_assets_manager.py  trade_calendar_manager.py  tushare_service.py  tushare_source.py  unified_factor_builder.py  utils.py
alpha/evaluation/: __init__.py  batch.py  batch_cluster.py  batch_ic_return.py  batch_return.py  cluster.py  data_provider.py  selection.py  single.py
alpha/evaluation/analysis/: trades.py
alpha/evaluation/backtest/: daily_evolving.py  period.py  top_n.py
alpha/evaluation/batch/: full_metrics.py  ic_decay.py  ic_summary.py  returns.py  returns_with_cost.py  turnover.py  turnover_decay.py
alpha/evaluation/single/: quantile_metric.py  single.py
alpha/gp/: base.py  cs_generator.py  cs_mask.py  deap_patch.py  dependence.py  ea.py  expr_codegen_patch.py  generator.py  label.py  main.py  small_cs_generator.py  ts_generator.py
alpha/gp/cs/: custom.py  helper.py
alpha/gp/ts/: helper.py
alpha/patch/: deap_patch.py
alpha/utils/: config.py  logger.py  schema.py
backup/migrate-to-uv/: environment.yml
backup/migrate-to-uv/scripts/: merge_probe_results.py  probe_deps.sh
backup/output-archive/: pip-audit.json
docs/: MINING_GUIDE_2019_2024.md  PRD.md  code-style.md  deps-audit.md  progress.txt  prompt.md
docs/plans/: 2026-02-22-factor-dev-platform.md
docs/specs/: factor_evaluation.md  machine_learning_pipeline.md  tech-spec-data_provider.md  tech-spec-gp.md  tech-spec-infrastructure.md
examples/: sync_data_example.py
expression/: alpha101.txt  alpha191.txt
scripts/: MINING_QUICKSTART.py  backtest_top_n.py  gen_factors.py  load_data.py  mine_factors_2019_2024.py  polars_sort.py  quant  script_batch_analysis.py  script_batch_full_metric.py  script_batch_quantile_returns.py  script_batch_turnover_decay.py  script_cluster.py  script_period_rebalance.py  script_single_factor_analysis.py  script_test_daily_evolving_backtest.py  shape.py  small_gp_generator.py  sync_data_2019_2024.py  test_label_column.py  tocsv.py
scripts/runs/Jan24_10-28-19_YongdeiMac.local/: events.out.tfevents.1769221699.YongdeiMac.local
scripts/runs/Jan24_17-47-45_YongdeiMac.local/: events.out.tfevents.1769248065.YongdeiMac.local
src/alpha_factory/cli/: backtest.py  data.py  eval.py  (+6 more)
src/utils/: config.py  logger.py
tests/: README.md  README_TEST_SUITE.md  conftest.py  test_cli_evals.py  test_cli_main.py  test_cli_ml.py  test_cli_sync.py  test_data_provider.py  test_data_provider_suite.py  test_src_layout_smoke.py  test_stock_assets_manager.py  test_unified_factor_builder.py
(+57 files in other folders)
