[project]
name = "alpha-factory"
version = "0.1.0"
description = "量化核心算子工厂 - 内核驱动引擎"
readme = "README.md"
# 锁定 Python 3.11 避免 llvmlite 编译冲突和跨版本解析问题
requires-python = "==3.11.*"
authors = [{ name = "Yongpeng", email = "your-email@example.com" }]

# 核心依赖清单：确保高性能算子链条 (Numba -> Polars-TA) 的稳定性
dependencies = [
    "typer>=0.9.0",
    "polars>=0.20.0",
    "pydantic-settings>=2.0.0",
    "loguru>=0.7.0",
    "numba==0.58.1",      # 锁定 0.58.1 以确保 Mac 3.11 下的二进制兼容
    "llvmlite==0.41.1",   # 对应 Numba 0.58.1 的编译器引擎
    "polars-ta>=0.1.0",
    "numpy<2.0.0",         # 必须锁定 1.x 版本，Numba 0.58 不支持 NumPy 2.0
    "pandas>=2.0.0",
    "tushare>=1.2.89",
    "pyarrow>=14.0.0",
    "tables>=3.8.0",      # 使用 `tables`（PyTables 包名），替代直接依赖 pytables，便于 HDFStore 支持
    "deap>=1.4.0",
    "lightgbm>=4.0.0",
    "scikit-learn>=1.3.0",
    "pytest>=7.0.0",
    "pre-commit>=3.5.0",
    "ruff>=0.1.0",
    "sympy~=1.14.0",
    "more-itertools~=10.8.0",
    "fastcluster<1.3.0",   # 兼容 NumPy 1.x 的版本
    "scipy<1.13.0",        # 兼容 NumPy 1.x 的版本
    "tensorboardx~=2.6.4",
    "pydantic~=2.11.7",
    "quantstats~=0.0.81",
    "expr-codegen>=0.16.4",
]

[project.scripts]
# 注册命令行入口，Agent 将通过此指令操作内核
quant = "alpha_factory.cli.main:app"

[dependency-groups]
# 开发工具组：符合 uv 最新标准，消除 deprecated 警告
dev = [
    "ipykernel>=6.29.0",
    "pre-commit>=4.5.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
# 明确代码位于 src 目录下，符合现代 Python src-layout 标准
where = ["src"]

[tool.uv]
# 开启包模式，允许 uv sync 时自动安装并激活 [project.scripts]
package = true

[tool.ruff]
line-length = 88
target-version = "py311"
